# safe-ssh-mcp

./: .gitignore  README.md  mcp_config.ini  mcp_ssh.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: conftest.py  test_config.py  test_run_ssh_command.py  test_ssh_pool.py  test_tools.py  test_validation.py
